--- a/Pages/PaymentPageTest.cshtml
+++ b/Pages/PaymentPageTest.cshtml
@@ -16,6 +16,6 @@
     <!-- 支払うボタン -->
     <button id="payButton">支払う</button>
 
-    <script src="~/path/to/your/script.js"></script>
+    <script src="~/js/sbps-connect.js"></script>
 </body>
 </html>
