コメントアウト

--- a/Pages/PaymentPageTest.cshtml
+++ b/Pages/PaymentPageTest.cshtml
@@ -7,10 +7,10 @@
 <h2>支払いページテスト</h2>
 
 <!-- JavaScriptファイルのリンク -->
-<script src="~/js/sbps-connect.js"></script>
+<!-- <script src="~/js/sbps-connect.js"></script>-->
 
 <!-- 支払いボタン -->
-<button onclick="processPayment()">支払いを実行</button>
+<!--<button onclick="processPayment()">支払いを実行</button>-->
 
 
 
