--- a/Pages/PaymentPageTest.cshtml
+++ b/Pages/PaymentPageTest.cshtml
@@ -211,10 +211,6 @@ function feppost(order) {
 
 	<form name="test" id="connect_area">
 			<div id="connect_button">
-				<button name="connect_button" onclick="f_submit(); return false;">Connect</button>
+				<button name="connect_button" onclick="f_submit()">Connect</button>
 			</div>
-			<div id="connect_button_comment">
-				<span>※画面中央部にある、ソースコード反映実施後に接続下さい。</span>
-			</div>
-			<div style="clear:both;"></div>
 	</form>
