--- a/Pages/PaymentPageTest.cshtml
+++ b/Pages/PaymentPageTest.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>支払いページテスト</h2>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfmB6u_ZuGfVws81m6wAwgXa-KGvDONtD9k72yyoSQ10wc1yw/viewform?embedded=true" width="640" height="374" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 <!-- JavaScriptファイルのリンク -->
 <script src="~/js/sbps-connect.js"></script>
 
